# Janus

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
BE/: Dockerfile  pyproject.toml
BE/src/: app.py
BE/src/agent/: graph.py  state.py  (+1 more)
FE/: nuxt.config.ts  package-lock.json  package.json
FE/components/: Navbar.vue
FE/pages/: evaluation.vue  janus.vue  knowledgebase.vue
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/: app.py
apps/backend/src/agent/: graph.py  state.py  tools.py
apps/backend/src/controllers/: evaluation.py  knowledgebase.py
apps/backend/src/core/: config.py
apps/backend/src/janus_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/src/repositories/: chat_repository.py  eval_repository.py  kb_repository.py  models.py
apps/backend/src/services/: chat_service.py  kb_service.py  vector_store_service.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_placeholder.py
apps/backend/tests/unit/: test_api.py
apps/mobile/: App.tsx  eslint.config.mjs  package.json
apps/web/: .prettierrc  app.vue  package-lock.json  package.json  tailwind.config.js
deploy/: README.md  docker-compose.yml
docs/: architecture.md
infra/docker/: .env.example  README.md  docker-compose.dev.yml
mobile/: package.json
pre-commit/: pre-commit-config.yaml
scripts/tests/: test_all.sh  test_be_integration.sh  test_be_unit.sh  test_fe_integration.sh  test_fe_unit.sh
shared/: package.json
tests/BE/: conftest.py
(+29 files in other folders)
